third_party/cuda-oxide/crates/cuda-macros/tests/compile_fail/device_reserved_name.rs
use cuda_macros::device;

#[device]
fn cuda_oxide_device_evil() {}

fn main() {}
